# mcp-cli

./: README.md  mcp-cli.cabal
src/: Mcp.hs  mcp-cli.hs
